[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Autonomous pretraining research on Apple Silicon — MLX native"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.24.0",
    "numpy>=2.2.0",
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]
